# simple-render

./: Cargo.toml
src/: animation.rs  lib.rs  memory.rs
src/input/: context.rs  keyboard.rs  keys.rs  mod.rs  pointer.rs  state.rs  widget_id.rs
src/ui/: mod.rs
src/ui/render/: context.rs  geometry.rs  image.rs  layout.rs  listener.rs  managed.rs  mod.rs  paint.rs  rect.rs  scaling.rs  text.rs
src/ui/render/paint/: buffers.rs  mod.rs  scaled.rs
src/ui/render/rect/: builder.rs  composition.rs  mod.rs  rendering.rs  styling.rs
src/ui/render/text/: decorations.rs  draw.rs  measure.rs
src/ui/types/: commands.rs  content.rs  element.rs  geometry.rs  layout.rs  mod.rs  paint.rs  style.rs
src/ui/types/content/: image.rs  text.rs
src/wayland/: api.rs  canvas.rs  handlers.rs  mod.rs  options.rs  placement.rs  runtime.rs
src/wayland/handlers/: input.rs
src/wayland/runtime/: queries.rs  surface.rs
src/wayland/runtime/surface/: draw.rs  frames.rs
src/widgets/: action.rs  button.rs  checkbox.rs  mod.rs  progress_bar.rs  shared.rs  slider.rs  toggle.rs
