[package]
name = "simple-render"
version = "0.2.1"
edition = "2024"
description = "a simple immediate mode wayland ui renderer inspired by clay"
repository = "https://github.com/lisk77/simple-render"
license = "GPL-3.0"
categories = ["gui", "rendering"]
keywords = ["wayland", "ui", "immediate-mode", "renderer"]
include = [
    "Cargo.toml",
    "src/**/*.rs",
]

[dependencies]
cosmic-text = "0.19.0"
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop", "xkbcommon"] }

[profile.release]
opt-level = "z"
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
