[package]
name = "simple-render"
version = "0.3.0"
edition = "2024"
description = "a simple immediate mode wayland ui renderer inspired by clay"
repository = "https://github.com/lisk77/simple-render"
license = "GPL-3.0"
categories = ["gui", "rendering"]
keywords = ["wayland", "ui", "immediate-mode", "renderer"]
include = [
    "Cargo.toml",
    "src/**/*.rs",
]

[dependencies]
base64 = "0.22"
cosmic-text = "0.19.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop", "xkbcommon"] }
xkeysym = "0.2"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
